EVA-4113 Update pipeline to Java21 (#504)